<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>Pokedex</groupId>
	<artifactId>Pokedex</artifactId>
	<version>6.1.2</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>skaro.pokedex.core.Pokedex</mainClass>
								</transformer>
							</transformers>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<shadedArtifactAttached>false</shadedArtifactAttached>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>jcenter</id>
			<url>https://jcenter.bintray.com</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- Reactor 3 -->
		<dependency>
			<groupId>io.projectreactor</groupId>
			<artifactId>reactor-core</artifactId>
			<version>3.2.5.RELEASE</version>
		</dependency>
		<!-- Discord4j -->
		<dependency>
			<!-- <groupId>com.github.austinv11</groupId> -->
			<groupId>com.discord4j.discord4j</groupId>
			<artifactId>discord4j-core</artifactId>
			<version>3.0.6</version>
		</dependency>
		<!-- Logback Classic: SLF4J Binding -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.9</version>
		</dependency>
		<dependency>
			<groupId>com.google.collections</groupId>
			<artifactId>google-collections</artifactId>
			<version>1.0-rc2</version>
		</dependency>
		<!-- MaryTTS English -->
		<dependency>
			<groupId>de.dfki.mary</groupId>
			<artifactId>voice-dfki-spike-hsmm</artifactId>
			<version>5.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.httpcomponents</groupId>
					<artifactId>httpcore</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- MaryTTS French -->
		<dependency>
			<groupId>de.dfki.mary</groupId>
			<artifactId>voice-enst-dennys-hsmm</artifactId>
			<version>5.2</version>
		</dependency>
		<!-- MaryTTS German -->
		<dependency>
			<groupId>de.dfki.mary</groupId>
			<artifactId>voice-dfki-pavoque-neutral-hsmm</artifactId>
			<version>5.2</version>
		</dependency>
		<!-- MaryTTS Italian -->
		<dependency>
			<groupId>de.dfki.mary</groupId>
			<artifactId>voice-istc-lucia-hsmm</artifactId>
			<version>5.2</version>
		</dependency>
		<!-- Caffine Cache -->
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>2.6.2</version>
		</dependency>
		<!-- MySQL -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.39</version>
		</dependency>
		<!-- Jazzy Spellchecker -->
		<dependency>
			<groupId>net.sf.jazzy</groupId>
			<artifactId>jazzy</artifactId>
			<version>0.5.2-rtext-1.4.1-2</version>
		</dependency>
		<!-- PokeFlex Java API -->
		<dependency>
			<groupId>PokeFlex-API</groupId>
			<artifactId>PokeFlex-API</artifactId>
			<version>1.2.0</version>
		</dependency>
		<!-- Patreon-Java -->
		<dependency>
			<groupId>com.patreon</groupId>
			<artifactId>patreon</artifactId>
			<version>0.4.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- DiscordBotList -->
		<dependency>
			<groupId>com.github.DiscordBotList</groupId>
			<artifactId>DBL-Java-Library</artifactId>
			<version>a7f791f</version>
		</dependency>
		<!-- Bucket4J -->
		<dependency>
			<groupId>com.github.vladimir-bukhtoyarov</groupId>
			<artifactId>bucket4j-core</artifactId>
			<version>4.1.1</version>
		</dependency>
		<!-- Jetty Utility -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>9.4.14.v20181114</version>
		</dependency>
		<!-- Apache Language Commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.8.1</version>
		</dependency>
		<!-- HttpClient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.7</version>
		</dependency>
	</dependencies>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>